close button modal on mobile fix

--- a/src/Components/Modal/Modal.css
+++ b/src/Components/Modal/Modal.css
@@ -129,4 +129,7 @@
     #mimic-octopus {
       position: static;
     }
+    .close-button {
+        right: 3%;
+    }
   }
